--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,22 @@
 {
   "dependencies": {
-    "com.meta.movement": "https://github.com/oculus-samples/Unity-Movement.git#v3.1.1",
-    "com.unity.collab-proxy": "2.0.0",
+    "com.meta.movement": "https://github.com/oculus-samples/Unity-Movement.git",
+    "com.meta.xr.sdk.core": "60.0.0",
+    "com.meta.xr.sdk.interaction.ovr": "60.0.0",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.18",
-    "com.unity.ide.visualstudio": "2.0.17",
+    "com.unity.ide.rider": "3.0.27",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.7.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.8.0",
-    "com.unity.xr.management": "4.3.3",
-    "com.unity.xr.oculus": "3.2.3",
+    "com.unity.visualscripting": "1.9.1",
+    "com.unity.xr.management": "4.4.0",
+    "com.unity.xr.oculus": "4.1.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
