--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.avatarsdk.metaperson.loader": "https://github.com/avatarsdk/metaperson-loader-unity.git",
     "com.meta.movement": "https://github.com/oculus-samples/Unity-Movement.git",
     "com.meta.xr.sdk.core": "60.0.0",
     "com.meta.xr.sdk.interaction.ovr": "60.0.0",
